Fixed view on mobile devices (will cleanup later)

--- a/src/pages/styles/EventDetails.css
+++ b/src/pages/styles/EventDetails.css
@@ -25,6 +25,7 @@
     flex-direction: column;
     gap:20px;
     width:25%;
+    height:80%;
 
 }
 .iconButton{
@@ -50,7 +51,7 @@
     display:flex;
     gap:10px;
     align-items: center;
-    height:80%;
+    height:75%;
     border-radius: 999px;
     margin-right:10px;
 }
@@ -63,5 +64,48 @@
     }
     .iconButtonsWrapper{
         background-color: hsl(220, 34%, 27%);
+    }
+}
+@media (max-width: 640px){
+    .tabIcon{
+        width:27px;
+        height:27px;
+        min-width:0px;
+        min-height:0px;
+    }
+    .iconButton{
+        width:27px;
+        height:27px;
+        min-width:0px;
+        min-height:0px;
+        background-size: contain;
+    }
+    .plusButton{
+        display:block;
+        width:27px;
+        height:27px;
+        min-width:0px;
+        min-height:0px;
+        background-size: contain;
+    }
+    .iconButtonsWrapper{
+        padding:0px 5px;
+        gap:5px;
+    }
+    .chakra-tabs{
+        margin:30px 0px !important;
+    }
+    .chakra-tabs__tablist{
+        height:40px !important;
+        padding:0px 10px !important;
+    }
+    .chakra-tabs__tab{
+        padding:5px !important;
+    }
+    .chakra-tabs__tablist .defaultButton{
+        min-width:0px;
+        height: fit-content;
+        width: fit-content;
+        background-color: transparent;
     }
 }
